changed gray to purple

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a {
 }
 
 .bg-4 {
-    background-color: #343a40; /* Dark Gray */
+    background-color: #540187; /* Dark Gray */
     color: #fff;
 }
 
