--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ a {
 }
 
 .bg-1 {
-    background-color: #ffffff; /* White */
-    color: #555555;
+    background-color: #675A6F; /* Chinese Violet */
+    color: #675A6F;
 }
 
 .bg-2 {
