note: do not edit direclty
this has a change i dont want reflected in the site but i want to use for later

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ font-style: normal;
 p {
     font-size: 26px;
     color: #ffffff
+      background: linear-gradient(to bottom, lightsteelblue, #3df89d);
 }
 
 a {
