--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ a {
 .bg-2 {
     background-color: #2e72a1; /* Blue */
     color: #00ff00;
+    text-color:#000000;
 }
 
 .card {
@@ -58,7 +59,7 @@ a {
 }
 
 .bg-3 { /*ABOUT ME SECTION*/
-    background-color: #7161ef; /* Black */
+    background-color: #7161ef; /* Purpley */
     color: #ffffff;
 }
 
